--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>          
         </nav>
+        <div id="acessibilidade">
+        <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
+        <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
+        </div>
        
     </header>
 
@@ -32,7 +36,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
+                    <img src="img/logo.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="0"
                         height="278" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
